(Header) fix styles for feedback button on tablets

--- a/app/components/modules/Header.scss
+++ b/app/components/modules/Header.scss
@@ -153,7 +153,7 @@ ul > li > .button {
 @media #{$medium-only} {
     .Header {
         .buttons {margin-right: 0;}
-        .success {font-size: 0.8rem;}
+        .success, .primary {font-size: 0.8rem;}
     }
 }
 // golos.io ico special navbar styles
